--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,6 @@ on:
     branches:
       - main
 jobs:
-  name: Test
   runs-on: ubuntu-latest
   steps:
-    run: echo "Hello, World!"
+    - run: echo "Hello, World!"
