--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - run: echo "Hello, World!"
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Hello, World!"
